Bug 839751 - "Assertion failure: i < argc_" with localeCompare.  r=jwalden